# strawberry-complexity-validation

./: .gitignore  README.md  Taskfile.yml  main.py  pyproject.toml  schema.graphql
strawberry_query_complexity/: __init__.py  _complexity.py  _context.py  _directives.py  _extension.py  _validation.py
tests/: test_complexity.py  test_list.py  test_sdl.py
