[project]
name = "strawberry-query-complexity"
version = "0.1.0"
description = ""
authors = [
    {name = "Doctor", email = "thirvondukr@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
