[project]
name = "strawberry-query-complexity"
version = "0.1.0"
description = ""
authors = [
    {name = "Doctor", email = "thirvondukr@gmail.com"},
]
dependencies = [
    "graphql-core>=3.0.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.2.0",
    "deptry>=0.12.0",
    "mypy>=1.9.0",
    "ruff>=0.3.2",
    "strawberry-graphql[debug-server]>=0.220.0",
]
testing = [
    "pytest>=8.1.1",
    "coverage>=7.4.3",
]
strawberry = [
    "rich>=13.7.1",
    "typer>=0.9.0",
    "libcst>=1.2.0",
]

[tool.coverage.run]
source = ["strawberry_query_complexity"]
omit = []
command_line = "-m pytest -vvv"
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
]
show_missing = true
skip_covered = true
skip_empty = true
precision = 2
fail_under = 100


[tool.black]
line-length = 80

[tool.mypy]
plugins = [
    "strawberry.ext.mypy_plugin",
]

strict = true
follow_imports = "normal"
ignore_missing_imports = false

allow_redefinition = false
disallow_any_explicit = false
ignore_errors = false
local_partial_types = true
no_implicit_optional = true
strict_optional = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

pretty = true
show_column_numbers = true
show_error_codes = true

[tool.deptry]
[tool.deptry.per_rule_ignores]
"DEP004" = ["strawberry"]


[tool.ruff]
src = ["strawberry_query_complexity", "tests"]

[tool.ruff.lint]
fixable = [
    "F",
    "E",
    "W",
    "I",
    "COM",
    "UP",
    "RUF",
]
unfixable = [
    "F841", # Variable  is assigned to but never used
]
select = ["ALL"]
ignore = [
    "E501", # Line Length
    "ANN101",
    "ANN102",
    "D10", # Disable mandatory docstrings
    "D203", # one-blank-line-before-class
    "D212", # multi-line-summary-first-line
    "TCH001",
    "TCH002",
    "TCH003",
]
[tool.ruff.lint.per-file-ignores]
"strawberry_query_complexity/_complexity.py" = ["ARG002"]
"tests/*" = ["S101"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.mccabe]
max-complexity = 6

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"
